--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^4.0.2",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "react-webcam": "^6.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
